custom function  property issue and annotation overlapping fixed

--- a/modules/web/scss/modules/diagram.scss
+++ b/modules/web/scss/modules/diagram.scss
@@ -131,7 +131,6 @@
     background: #f4f4f4;
     overflow: auto;
     padding: 7px;
-    z-index: 1;
     overflow: visible;
 }
 
